--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.7",
+    "apollo-mocked-provider": "^3.0.2",
     "graphql": "^14.5.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -38,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@apollo/react-testing": "^3.1.3",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1"
   }
